# Tesi_PNC

Casadi/Test_2/: hs071_nlp.cpp
Casadi/Test_2/CasADi_export/: source.c
Casadi/Test_3/: CMakeLists.txt  hs071_nlp1.cpp
Casadi/Test_4/: pattern_functions.h
Casadi/Test_4/CasADi_export/: source.c  source.py
Casadi/Test_5/: CMakeLists.txt  hs071_nlp.cpp
Casadi/Test_5/CasADi_export/: source.c  source.py
Casadi/Test_6/: hs071_nlp.cpp  hs071_nlp1.cpp
Casadi/Test_6/CasADi_export/: source.c
Casadi/Test_7/: CMakeLists.txt  casadi_functions.c  hs071_main.cpp  pattern_functions.cpp  test_7_main.cpp  test_7_nlp.cpp
Casadi/Test_7/CasADi_export/: source.c  source_2.py
Casadi/Test_7/templates/: ipopt_main.txt
Casadi/V1/Test_2/: hs071_nlp.cpp
Casadi/V1/Test_2_2/: CMakeLists.txt
Casadi/V1/Test_2_2/CasADi_export/: source.py
Casadi/V1/Test_3_1/: hs071_nlp.cpp
Casadi/V1/Test_3_1/CasADi_export/: source.c  source.py
Casadi/V1/Test_5/: hs071_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Forward_mode/Test_2/: source.py  test_1_main.cpp  test_1_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Forward_mode/Test_3/: CMakeLists.txt  source.py  test_1_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Forward_mode/Test_4/: test_4_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Forward_mode/Test_5/: source.py  test_5_main.cpp  test_5_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Forward_mode/Test_6/: CMakeLists.txt  jinja.py  source.py  test_6_main.cpp  test_6_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Forward_mode/Test_7/: source.py  test_7_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Reverse_mode/Test_2/: CMakeLists.txt  source.py  test_2_main.cpp  test_2_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Reverse_mode/Test_3/: CMakeLists.txt  source.py  test_3_main.cpp  test_3_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Reverse_mode/Test_4/: CMakeLists.txt  source.py  test_4_main.cpp  test_4_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Reverse_mode/Test_5/: CMakeLists.txt  test_5_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Reverse_mode/Test_6/: test_6_nlp.cpp
Ipopt/Casadi+Jinja+Autodiff/Reverse_mode/Test_7/: CMakeLists.txt  README.txt  test_7_main.cpp  test_7_nlp.cpp
Ipopt/Casadi+Jinja/V1/Test_2/: CMakeLists.txt  casadi_functions.c  source.py  test_2_main.cpp  test_2_nlp.cpp
Ipopt/Casadi+Jinja/V1/Test_3/: CMakeLists.txt  casadi_functions.c  source.py  test_3_main.cpp  test_3_nlp.cpp
Ipopt/Casadi+Jinja/V1/Test_4/: CMakeLists.txt  casadi_functions.c  jinja.py  source.py  test_4_main.cpp  test_4_nlp.cpp
Ipopt/Casadi+Jinja/V1/Test_5/: CMakeLists.txt  casadi_functions.c  source.py  test_1_main.cpp  test_1_nlp.cpp  test_1_nlp.hpp  test_5_main.cpp  test_5_nlp.cpp
Ipopt/Casadi+Jinja/V1/Test_6/: CMakeLists.txt  casadi_functions.c  source.py  test_6_main.cpp  test_6_nlp.cpp
Ipopt/Casadi+Jinja/V1/Test_6/templates/: ipopt_nlp.txt
Ipopt/Casadi+Jinja/V1/Test_7/: CMakeLists.txt  source.py  test_7_nlp.cpp
Ipopt/Casadi/V1/Test_1/: hs071_nlp.cpp  source.c
Ipopt/Casadi/V1/Test_2/: hs071_nlp.cpp
Ipopt/Casadi/V1/Test_3/: hs071_nlp.cpp
Ipopt/Casadi/V1/Test_4/: hs071_nlp.cpp
Ipopt/Casadi/V2/Test_2/: hs071_nlp.cpp
Ipopt/Casadi/V2/Test_3/: CMakeLists.txt
Ipopt/Casadi/V2/Test_4/: CMakeLists.txt  hs071_nlp.cpp
Ipopt/Casadi/V2/Test_5/: hs071_nlp.cpp
Ipopt/Casadi/V3/Test_2/: hs071_nlp.cpp
Test/Autodiff/: Higher-order_cross_derivatives_of_a_scalar_function  Higher-order_cross_derivatives_of_a_scalar_function.cpp  derivative  derivative.cpp  gradient_vector  gradient_vector.cpp  gradient_vector_multivar  gradient_vector_multivar.cpp  high_order_cross_derivative  high_order_cross_derivative.cpp  single_variable_derivative.cpp
Test/CasADi/Test_compilazione_CMake/Test_1/: Makefile  Makefile.in  cpp_example_executable
Test/CasADi/Test_compilazione_CMake/Test_2/: CMakeLists.txt
Test/CasADi/Test_compilazione_CMake/Test_3/: CMakeLists.txt  hs071_main.cpp
Test/CasADi/Test_compilazione_CMake/Test_4/: CMakeLists.txt  text.cpp  (+1 more)
Test/CasADi/Test_export_vari/: export_1.py  function_min.py  function_objects.py  gradient_bertolazzi.py  gradients_matrix.py
Test/CasADi/Test_utilizzo_gen/: CMakeLists.txt  main  main.cpp
Test/CasADi/Test_utilizzo_gen/source/: CMakeLists.txt  gen.c  gen.h
(+54 files in other folders)
